<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/rectangleView"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="28sp"
            android:textColor="?android:textColorTertiary"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/rectangleView"
        app:layout_constraintBottom_toTopOf="@id/history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/ScanButton"
            android:layout_width="295dp"
            android:layout_height="96dp"
            android:layout_marginBottom="20dp"
            android:text="@string/scan_a_barcode"
            android:textSize="18sp"
            android:textColor="?android:textColorTertiary" />

        <Button
            android:id="@+id/ScanTextButton"
            android:layout_width="295dp"
            android:layout_height="96dp"
            android:layout_marginBottom="20dp"
            android:text="@string/scan_text"
            android:textSize="18sp"
            android:textColor="?android:textColorTertiary" />

        <Button
            android:id="@+id/TypeIngredients"
            android:layout_width="295dp"
            android:layout_height="96dp"
            android:layout_marginBottom="20dp"
            android:text="@string/input_ingredients"
            android:textSize="18sp"
            android:textColor="?android:textColorTertiary" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/history"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/circular_button"
        android:src="@drawable/history_button"
        android:padding="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/history" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="268sp"
        android:layout_height="72sp"
        android:layout_marginBottom="28sp"
        android:text="@string/warning_string"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toEndOf="@+id/history" />


</androidx.constraintlayout.widget.ConstraintLayout>
